static site representation down

--- a/browser/scss/team/main.scss
+++ b/browser/scss/team/main.scss
@@ -2,7 +2,16 @@
 	background-color: lighten(#364824, 10%);
 	th { color: white;}
 }
-
+.totalpoints{
+	padding-left: 40px;
+	padding-right: 60px;
+	font-size: 20px
+}
+.totalpointstext{
+	font-size:17px;
+	font-weight: bold;
+	text-align: center;
+}
 .mytable {
 	margin-bottom: 0px;
 }
